// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeyondCode renders correctly with all props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c12 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c10 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c15 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c18 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c8 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  line-height: 1.7;
  margin-bottom: 3rem;
  max-width: 680px;
}

.c13 {
  border: 1px solid var(--color-main);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
}

.c14 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c16 {
  flex: 1;
  line-height: 1.6;
  margin-bottom: 1.5rem;
}

.c17 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c12 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c12 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c12 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 1536px) {
  .c12 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.99px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 1199.99px) {
  .c11 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <section
    class="c0"
    id="beyond-code"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Beyond Code
      </p>
      <p
        class="c3 c4 c6"
      >
        Life & Passions
      </p>
      <h2
        class="c7 c8"
      >
        Beyond the keyboard
      </h2>
      <p
        class="c9"
      >
        Life, travel and passions
      </p>
      <p
        class="c10 c11"
      >
        Work is a big part of who I am, but not the whole story. Here's the rest.
      </p>
      <div
        class="c12"
      >
        <article
          class="c13"
        >
          <h3
            class="c14"
          >
            Sports
          </h3>
          <p
            class="c15 c16"
          >
            Bologna FC and Virtus Bologna — followed from Bangkok, where every evening kick-off lands well past midnight.
          </p>
          <ul
            aria-label="Sports tags"
            class="c17"
          >
            <li
              class="c18"
            >
              Bologna FC
            </li>
            <li
              class="c18"
            >
              Virtus Bologna
            </li>
          </ul>
        </article>
        <article
          class="c13"
        >
          <h3
            class="c14"
          >
            Travel & Life
          </h3>
          <p
            class="c15 c16"
          >
            Based in Bangkok since late 2025, after six years in Amsterdam. Fully remote, used to working across time zones with North American and European teams.
          </p>
          <ul
            aria-label="Travel & Life tags"
            class="c17"
          >
            <li
              class="c18"
            >
              Bangkok
            </li>
            <li
              class="c18"
            >
              Amsterdam
            </li>
            <li
              class="c18"
            >
              Remote-first
            </li>
          </ul>
        </article>
        <article
          class="c13"
        >
          <h3
            class="c14"
          >
            Languages
          </h3>
          <p
            class="c15 c16"
          >
            Italian native, English professional, Thai in progress — slowly but stubbornly.
          </p>
          <ul
            aria-label="Languages tags"
            class="c17"
          >
            <li
              class="c18"
            >
              Italian
            </li>
            <li
              class="c18"
            >
              English
            </li>
            <li
              class="c18"
            >
              Thai
            </li>
          </ul>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`BeyondCode renders correctly without intro 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c10 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c16 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c8 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  border: 1px solid var(--color-main);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
}

.c12 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c14 {
  flex: 1;
  line-height: 1.6;
  margin-bottom: 1.5rem;
}

.c15 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c10 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c10 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 1536px) {
  .c10 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.99px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <section
    class="c0"
    id="beyond-code"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Beyond Code
      </p>
      <p
        class="c3 c4 c6"
      >
        Life & Passions
      </p>
      <h2
        class="c7 c8"
      >
        Beyond the keyboard
      </h2>
      <p
        class="c9"
      >
        Life, travel and passions
      </p>
      <div
        class="c10"
      >
        <article
          class="c11"
        >
          <h3
            class="c12"
          >
            Sports
          </h3>
          <p
            class="c13 c14"
          >
            Bologna FC and Virtus Bologna — followed from Bangkok, where every evening kick-off lands well past midnight.
          </p>
          <ul
            aria-label="Sports tags"
            class="c15"
          >
            <li
              class="c16"
            >
              Bologna FC
            </li>
            <li
              class="c16"
            >
              Virtus Bologna
            </li>
          </ul>
        </article>
        <article
          class="c11"
        >
          <h3
            class="c12"
          >
            Travel & Life
          </h3>
          <p
            class="c13 c14"
          >
            Based in Bangkok since late 2025, after six years in Amsterdam. Fully remote, used to working across time zones with North American and European teams.
          </p>
          <ul
            aria-label="Travel & Life tags"
            class="c15"
          >
            <li
              class="c16"
            >
              Bangkok
            </li>
            <li
              class="c16"
            >
              Amsterdam
            </li>
            <li
              class="c16"
            >
              Remote-first
            </li>
          </ul>
        </article>
        <article
          class="c11"
        >
          <h3
            class="c12"
          >
            Languages
          </h3>
          <p
            class="c13 c14"
          >
            Italian native, English professional, Thai in progress — slowly but stubbornly.
          </p>
          <ul
            aria-label="Languages tags"
            class="c15"
          >
            <li
              class="c16"
            >
              Italian
            </li>
            <li
              class="c16"
            >
              English
            </li>
            <li
              class="c16"
            >
              Thai
            </li>
          </ul>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`BeyondCode renders correctly without tags 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c10 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c8 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c11 {
  border: 1px solid var(--color-main);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
}

.c12 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c14 {
  flex: 1;
  line-height: 1.6;
  margin-bottom: 1.5rem;
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c10 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c10 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 1536px) {
  .c10 {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.99px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <section
    class="c0"
    id="beyond-code"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Beyond Code
      </p>
      <p
        class="c3 c4 c6"
      >
        Life & Passions
      </p>
      <h2
        class="c7 c8"
      >
        Beyond the keyboard
      </h2>
      <p
        class="c9"
      >
        Life, travel and passions
      </p>
      <div
        class="c10"
      >
        <article
          class="c11"
        >
          <h3
            class="c12"
          >
            Sports
          </h3>
          <p
            class="c13 c14"
          >
            Bologna FC and Virtus Bologna — follow both faithfully.
          </p>
        </article>
      </div>
    </section>
  </section>
</div>
`;
